shift sidebar fix to community page view

--- a/src/app/community-page/community-page.component.css
+++ b/src/app/community-page/community-page.component.css
@@ -16,3 +16,11 @@ app-forum-topics {
 app-forum {
   grid-area: forum;
 }
+
+#sidebar {
+  height: 10000000px;
+  background-color: #0c71b9;
+  width: 200px;
+  position: fixed;
+  z-index: -100000;
+}
